objects/Case_Template__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Close_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Close Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Owner__c</fullName>
        <description>Who will be the Current Owner of the newly created Task.</description>
        <label>Default Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_In_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This number of days should be added to Task Creation Time and set as Due Date.</description>
        <label>Due In (Days)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stages__c</fullName>
        <label>Opportunity Stages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Merged</fullName>
                </value>
                <value>
                    <fullName>Negotiating</fullName>
                </value>
                <value>
                    <fullName>Qualifying</fullName>
                </value>
                <value>
                    <fullName>Selling</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <description>Role of the User in given Object to which the Task should be assigned to.</description>
        <label>Owner Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Sales Analyst</fullName>
                </value>
                <value>
                    <fullName>Legal Counsel</fullName>
                </value>
                <value>
                    <fullName>Product Design Manager</fullName>
                </value>
                <value>
                    <fullName>Member Success Executive</fullName>
                </value>
                <value>
                    <fullName>Real Estate Rep</fullName>
                </value>
                <value>
                    <fullName>Member Success Manager</fullName>
                </value>
                <value>
                    <fullName>Real Estate Advisory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise Finance &amp; Strategy</fullName>
                </value>
                <value>
                    <fullName>Real Estate Advisory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject of the Task should be generated using this Task. Initially it will be hard coded text, in future we may use merge fields.</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triggering_Object__c</fullName>
        <description>Object on which Workflow should be written, to create task.</description>
        <label>Triggering Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This is a Task Template which will be used to generate Standard Tasks automatically or by manual event.</description>
    <label>Case Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Owner_Role__c</columns>
        <columns>Opportunity_Stages__c</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Default_Owner__c</columns>
        <columns>Subject__c</columns>
        <columns>Triggering_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>